workspace-sf/force-app/main/default/objects/GrupoContrato__c/GrupoContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os dados dos grupos de segurados do contrato</description>
    <label>Grupo do contrato</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos do contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>