workspace-sf/force-app/main/default/objects/GrupoContrato__c/fields/ContratanteContrato__c.field-meta.xml
<CustomField>
    <fullName>ContratanteContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratante do contrato</label>
    <referenceTo>ContratanteContrato__c</referenceTo>
    <relationshipLabel>Grupos do contrato</relationshipLabel>
    <relationshipName>GruposContrato</relationshipName>
    <type>Lookup</type>
</CustomField>