workspace-sf/force-app/main/default/objects/GrupoContrato__c/fields/QuantidadeVidas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVidas__c</fullName>
    <label>Quantidade de vidas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>