workspace-sf/force-app/main/default/objects/GrupoContrato__c/fields/TipoCalculo__c.field-meta.xml
<CustomField>
    <fullName>TipoCalculo__c</fullName>
    <label>Tipo de cálculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLO</fullName>
            </value>
            <value>
                <fullName>Capital Uniforme</fullName>
            </value>
            <value>
                <fullName>Escalonado por Cargo</fullName>
            </value>
            <value>
                <fullName>Escalonado por faixa de salarial</fullName>
            </value>
            <value>
                <fullName>Livre Escolha de Capital</fullName>
            </value>
            <value>
                <fullName>Múltiplo Salarial</fullName>
            </value>
            <value>
                <fullName>Multipo por prêmio pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>